--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="features">
         <h2>Game Features</h2>
         <ul>
-            <li>Challenging levels with unique obstacles</li>
+            <li>Challenging progression with unique obstacles</li>
             <li>Beautiful hand-drawn graphics</li>
             <li>Engaging storyline and characters</li>
             <li>Atmospheric music and sound effects</li>
