--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ul>
             <li>Challenging progression with unique obstacles</li>
             <li>Beautiful hand-drawn graphics</li>
-            <li>Engaging storyline and characters</li>
+            <li>Compete with friends on a leaderboard</li>
             <li>Atmospheric music and sound effects</li>
         </ul>
     </section>
